log
Thu 09 May 2024 06:22:12 PM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|8
total_score: 0/70
a489045
Thu 09 May 2024 06:27:21 PM UTC: 
 treemap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
 tests:  1|8
total_score: 0/70
0b9feb9
Thu 09 May 2024 06:29:33 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
test.c: In function ‘createTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
39c577b
Thu 09 May 2024 06:38:57 PM UTC: 
 treemap.c | 29 +++++++++++++++++++++++++----
 1 file changed, 25 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:102:16: error: unused variable ‘ub_node’ [-Werror=unused-variable]
  102 |     TreeNode * ub_node = NULL;
      |                ^~~~~~~
test.c: In function ‘createTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
2484937
Thu 09 May 2024 06:45:36 PM UTC: 
 treemap.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:113:57: error: expected statement before ‘)’ token
  113 |             if(is_equal(tree, aux->pair->key, key) == 1))
      |                                                         ^
treemap.c:118:13: error: ‘else’ without a previous ‘if’
  118 |             else aux = aux->right;
      |             ^~~~
treemap.c:122:41: error: ‘TreeNode’ has no member named ‘pai’; did you mean ‘pair’?
  122 |     if(ub_node != NULL) return ub_node->pai;
      |                                         ^~~
      |                                         pair
test.c: In function ‘createTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
6c21d64
Thu 09 May 2024 06:50:23 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:114:57: error: expected statement before ‘)’ token
  114 |             if(is_equal(tree, aux->pair->key, key) == 1))
      |                                                         ^
treemap.c:119:13: error: ‘else’ without a previous ‘if’
  119 |             else aux = aux->right;
      |             ^~~~
treemap.c:123:41: error: ‘TreeNode’ has no member named ‘pai’; did you mean ‘pair’?
  123 |     if(ub_node != NULL) return ub_node->pai;
      |                                         ^~~
      |                                         pair
treemap.c:125:1: error: control reaches end of non-void function [-Werror=return-type]
  125 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8dcc10a
Thu 09 May 2024 06:51:06 PM UTC: 
 treemap.c | 10 +---------
 1 file changed, 1 insertion(+), 9 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:106:57: error: expected statement before ‘)’ token
  106 |             if(is_equal(tree, aux->pair->key, key) == 1))
      |                                                         ^
treemap.c:111:13: error: ‘else’ without a previous ‘if’
  111 |             else aux = aux->right;
      |             ^~~~
treemap.c:115:41: error: ‘TreeNode’ has no member named ‘pai’; did you mean ‘pair’?
  115 |     if(ub_node != NULL) return ub_node->pai;
      |                                         ^~~
      |                                         pair
treemap.c:117:1: error: control reaches end of non-void function [-Werror=return-type]
  117 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b1ac45d
Thu 09 May 2024 06:51:51 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
1fa7087
Thu 09 May 2024 07:03:08 PM UTC: 
 treemap.c | 21 +++++++++++++++++++--
 1 file changed, 19 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:61:15: error: unused variable ‘aux’ [-Werror=unused-variable]
   61 |     TreeNode *aux = tree->root;
      |               ^~~
treemap.c:60:15: error: unused variable ‘nuevo’ [-Werror=unused-variable]
   60 |     TreeNode *nuevo = createTreeNode(key, value);
      |               ^~~~~
cc1: all warnings being treated as errors
Compilation failed
b901b36
Thu 09 May 2024 07:03:39 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|7
total_score: 5/70
ee8b998
Thu 09 May 2024 07:05:39 PM UTC: 
 treemap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
c2243bb
